@@ -1,0 +1,8 @@
+auto xxx()
+{
+	// alias this as statement
+    struct Foo {
+        alias state this;
+    }
+    //alias state this;
+}
