@@ -1,0 +1,5 @@
+auto xxx()
+{
+	// alias this as statement
+    alias state this;
+}
