@@ -1,0 +1,7 @@
+auto xxx()
+{
+    static struct Foo
+    {
+    	int b;
+    }
+}
