@@ -11,7 +11,8 @@
  * Labels for D elements in the outline and quick outline now show type (for variables) and return type (for functions).
  * Icons for D elements in all viewers now show protection attribute info.
    * This can be configured (overlay for all elements, or JDT-style icon overlays) in the new Appearance preference page.
- * Fixed parser NPE bug when using inout as const wildcard declarator. 
+ * Fixed parser NPE bug when using inout as const wildcard declarator.
+ * Fixed parser error when "alias this" appeared as a statement. 
  
 == DDT 0.5.0 (2011-08-26) ==
  * Updated DDT to DTLK 3.0
